#### 2.4.0
RC2
    * Fix #81 Problème plugin translation core
    * Fix #80 Suppression sous-catégorie
    * :widget - share_display - minor bug fix
    * Ajout de la classe view-bloc et collapse-block
    * Balisage de traduction du plugin clearcache
    * Fix #72 Template admin product, category, subcategory, CMS
    * Fix bug ajout d'adresse mail dans le plugin contact
    * Works #68 Plugins dédiés au catalogue (produit)
    * Upgrade de jmMap de jimagine
    * Modification des fichiers request (admin)
    * plugin - contact - minor improvement

RC1
    * Fix #67 Traduction FR Administration
    * Fix #79 Traduction FR installation
    * Fix #75 Traduction FR des messages dans javascript
    * Modification de l'url post pour le plugin contact (frontend)
    * upgrade swiftmailer 4.3.0 => 5.0.0
    * Ajout de commentaire dans la class imagesize
    * Suppression de la class blockDom
    * Modification de la structure des traductions admin

Beta 4
    * Works #67 Traduction FR Administration (request)
    * Works #79 Traduction FR auto installation
    * Works #75 Traduction FR des messages dans javascript (install)
    * Works #75 Traduction FR des messages dans javascript (catalog)
    * Works #67 Traduction FR Administration (cache)
        * Fix icon jsonHome for empty table
    * Works #67 Traduction FR Administration (catalog)
        * Traduction catégories
        * Traduction sous catégories
        * Traduction produits
    * TinyMCE advanced styles (fancybox)
    * Works #67 Traduction FR Administration (global)
    * Works #75 Traduction du module Utilisateurs (googletools,config,catalog)
    * Upgrade de Font Awesome 3.0.2 => 3.1.0
    * Fix bug Sitemap ping (fichier request inexistant)
    * :global - model_db - minor improvement scope
    * Works #72 Template admin product, category, subcategory, CMS
    * Works #67 Traduction du module Utilisateurs (CMS, News)
    * Fix #77 Erreur date url dans setItemData (frontend_model_news)